# rex-intelligence-platform

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN_SUMMARY.md  Dockerfile  PHASE1_COMPLETION.md  PHASE1_GUIDE.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/approvals/: __init__.py  manager.py  schemas.py  store.py
app/core/: __init__.py  approval_manager_factory.py  approval_migration.py  approval_store_protocol.py  config.py  json_log_io.py  logger.py  preflight.py  runtime_lock.py  runtime_status.py  sqlite_approval_store.py  sqlite_transaction_log.py  transaction_log_factory.py  transaction_log_migration.py  transaction_log_protocol.py
docs/: 01-PROJECT_STRUCTURE.md  02-ARCHITECTURE.md  03-WORKER_DESIGN.md  04-AI_ROUTER.md  05-DEPLOYMENT.md  06-ROADMAP.md  OPERATOR_DEPLOYMENT.md  PROJECT_STATUS.md  RELEASE_NOTES.md
runtime/: approvals.json
scripts/: __init__.py  migrate_approvals.py  migrate_transaction_logs.py  mock_line.py  prune_approvals.py  runtime_status.py
tests/: __init__.py  test_approval_bridge.py  test_approval_engine.py  test_approval_manager_factory.py  test_approval_migration.py  test_approval_prune.py  test_approval_store.py  test_cli_prune_approvals.py  test_cli_runtime_status.py  test_cli_smoke.py  test_document_intelligence.py  test_end_to_end_workflow_audit.py  test_filename_intelligence.py  test_final_regression_release_candidate.py  test_folder_intelligence_plan.py  test_folder_worker.py  test_health.py  test_json_log_io.py  test_mock_line.py  test_mock_line_confirm_move.py  test_mock_line_confirm_rename.py  test_mock_line_move_rollback_execution.py  test_mock_line_move_rollback_preview.py  test_move_approval_bridge.py  test_move_plan_workflow.py  test_move_preflight.py  test_move_rollback_preview.py  test_move_transaction_log.py  test_move_transaction_log_rotation.py  test_once_only_guard.py  test_operator_error_messages.py  test_operator_help_text.py  test_operator_preflight.py  test_path_resolution.py  test_pdf_intelligence.py  test_pdf_worker.py  test_preflight.py  test_release_artifact_readiness.py  test_release_readiness.py  test_rollback_execution.py  (+15 more)
(+43 files in other folders)
