[tool.poetry]
name = "rex-intelligence-platform"
version = "0.1.0"
description = "Rex Intelligence Platform - LINE based AI OS"
authors = ["Rex Chen <rex0623@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }, { include = "scripts" }]

[tool.poetry.scripts]
rip = "scripts.mock_line:main"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
python-dotenv = "^1.0.1"
line-bot-sdk = "^3.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
